--- a/Reserva_Vehiculos/Views/Categoria/categoria_view.cshtml
+++ b/Reserva_Vehiculos/Views/Categoria/categoria_view.cshtml
@@ -122,8 +122,8 @@
                                     <input type="hidden" name="hora_ini" id="hora_ini" value="@Model._Pet_Reserva.hora_ini">
                                     <input type="hidden" name="fecha_fin" id="fecha_fin" value="@Model._Pet_Reserva.fecha_fin">
                                     <input type="hidden" name="hora_fin" id="hora_fin" value="@Model._Pet_Reserva.hora_fin">
-                                    <input type="hidden" name="Ubi_recojida" id="Ubi_recojida" value="@Model._Pet_Reserva.fk_id_ubicacion_inicial">
-                                    <input type="hidden" name="Ubi_devolucion" id="Ubi_devolucion" value="@Model._Pet_Reserva.fk_id_ubicacion_final">
+                                    <input type="text" name="fk_id_ubicacion_inicial" id="fk_id_ubicacion_inicial" value="@Model._Pet_Reserva.fk_id_ubicacion_inicial">
+                                    <input type="text" name="fk_id_ubicacion_final" id="fk_id_ubicacion_final" value="@Model._Pet_Reserva.fk_id_ubicacion_final">
 
 
 
