--- a/Reserva_Vehiculos/Views/Peticion/Datos_Reserva.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Datos_Reserva.cshtml
@@ -60,13 +60,13 @@
                 <div class="border-bottom my-3">
 
                     <div class="form-group mb-4">
-                        <input name="id_categoria" id="id_categoria" type="text" value="@Model.categoria.id_categoria">
-                        <input name="fecha_ini" id="fecha_ini" type="text" value="@Model._Pet_Reserva.fecha_ini">
-                        <input name="fecha_fin" id="fecha_fin" type="text" value="@Model._Pet_Reserva.fecha_fin">
-                        <input name="hora_ini" id="hora_ini" type="text" value="@Model._Pet_Reserva.hora_ini">
-                        <input name="hora_fin" id="hora_fin" type="text" value="@Model._Pet_Reserva.hora_fin">
-                        <input name="fk_id_ubicacion_inicial" id="fk_id_ubicacion_inicial" type="text" value="@Model._Pet_Reserva.fk_id_ubicacion_inicial">
-                        <input name="fk_id_ubicacion_final" id="fk_id_ubicacion_final" type="text" value="@Model._Pet_Reserva.fk_id_ubicacion_final">
+                        <input name="id_categoria" id="id_categoria" type="hidden" value="@Model.categoria.id_categoria">
+                        <input name="fecha_ini" id="fecha_ini" type="hidden" value="@Model._Pet_Reserva.fecha_ini">
+                        <input name="fecha_fin" id="fecha_fin" type="hidden" value="@Model._Pet_Reserva.fecha_fin">
+                        <input name="hora_ini" id="hora_ini" type="hidden" value="@Model._Pet_Reserva.hora_ini">
+                        <input name="hora_fin" id="hora_fin" type="hidden" value="@Model._Pet_Reserva.hora_fin">
+                        <input name="fk_id_ubicacion_inicial" id="fk_id_ubicacion_inicial" type="hidden" value="@Model._Pet_Reserva.fk_id_ubicacion_inicial">
+                        <input name="fk_id_ubicacion_final" id="fk_id_ubicacion_final" type="hidden" value="@Model._Pet_Reserva.fk_id_ubicacion_final">
                         <button type="button" class="btn btn-secondary">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Realizar Peticion</button>
                     </div>
