--- a/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
@@ -6,13 +6,14 @@
 <form asp-action="peticion" asp-controller="Peticion" method="post">
     <nav id="mi-navbar" class="navbar navbar-expand-lg navbar-light bg-ligh">
         <fieldset>
-            <legend>
-                Nueva Reserva
-            </legend>
 
             <div class="container-fluid">
                 <div class="row w-100">
                     <div class="col-md-4">
+
+                        <div >
+                            <h1> Nueva Reserva</h1>
+                        </div>
                         <div class="navbar-brand">
                             <img src="~/images/login.png" alt="Login" width="20" height="20" />
                             <a class="navbar-brand" asp-action="Login" asp-controller="User">Login</a>
