--- a/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
@@ -36,7 +36,7 @@
                                         <option></option>
                                         @foreach (var item in Model)
                                         {
-                                            <option value="@item.id_ubicacion">@item.ubicacion</option>
+                                            <option value="@item.id_ubicacion">@item.Ubicacion_ini</option>
                                         }
                                     </select>
                                     <script>
@@ -73,7 +73,7 @@
                                         <option></option>
                                         @foreach (var item in Model)
                                         {
-                                            <option value="@item.id_ubicacion">@item.ubicacion</option>
+                                            <option value="@item.id_ubicacion">@item.Ubicacion_ini</option>
                                         }
                                     </select>
                                     <script>
