--- a/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Peticion.cshtml
@@ -32,7 +32,7 @@
                             <div class="col-md-10 mb-2">
                                 <div class="form-floating">
                                     <select class="form-select" id="ubicacionDropdown" aria-label="Ubicación"
-                                        onchange="enviarSeleccion()">
+                                        onchange="enviarSeleccion()" required>
                                         <option></option>
                                         @foreach (var item in Model)
                                         {
@@ -69,7 +69,7 @@
                             <div class="col-md-10 mb-2">
                                 <div class="form-floating">
                                     <select class="form-select" id="ubicacionDropdown_fi" aria-label="Ubicación"
-                                        onchange="enviarSeleccion_fi()">
+                                        onchange="enviarSeleccion_fi()" required>
                                         <option></option>
                                         @foreach (var item in Model)
                                         {
@@ -86,7 +86,7 @@
                                         }
                                     </script>
                                     <input type="hidden" name="id_ubicacion_fin" id="id_ubicacion_fin">
-                                    <label for="ubicacionDropdown2">Lugar de Devolucion</label>
+                                    <label for="ubicacionDropdown_fi">Lugar de Devolucion</label>
                                 </div>
                             </div>
 
