--- a/Reserva_Vehiculos/Views/DatosPersonales/DatosPersonales.cshtml
+++ b/Reserva_Vehiculos/Views/DatosPersonales/DatosPersonales.cshtml
@@ -5,107 +5,109 @@
 
 
 <div class="container text-center">
-    <h1>Datos Personales</h1><br>
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <div class="form-group mb-4">
+    <form method="post" asp-action="Enviar_DatosPersonales" asp-controller="DatosPersonales">
+        <h1>Datos Personales</h1><br>
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="form-group mb-4">
 
-                <input type="text" class="form-control form-control-lg" id="input1" style="height: 50px;"
-                    placeholder="Primer nombre">
+                    <input type="text" class="form-control form-control-lg" name="primer_nombre" id="primer_nombre"
+                        style="height: 50px;" placeholder="Primer nombre">
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <input type="text" class="form-control form-control-lg" id="input2" style="height: 50px;"
-                    placeholder="Segundo nombre">
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <input type="text" class="form-control form-control-lg" id="input3" style="height: 50px;"
-                    placeholder="Primer apellido">
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <input type="text" class="form-control form-control-lg" id="input4" style="height: 50px;"
-                    placeholder="Segundo apellido">
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" style="height: 50px;"
-                    aria-describedby="emailHelp" placeholder="Correo electrónico">
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <input type="number" class="form-control form-control-lg" id="input5" style="height: 50px;"
-                    placeholder="Telefono">
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <div class="form-floating">
-                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-                        <option selected>CC</option>
-                        <option value="1">Doc extranjero</option>
-                        <option value="2">Pasaporte</option>
-                    </select>
-                    <label for="floatingSelect">Tipo de documento</label>
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <input type="text" class="form-control form-control-lg" name="segundo_nombre" id="segundo_nombre"
+                        style="height: 50px;" placeholder="Segundo nombre">
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <input type="number" class="form-control form-control-lg" id="input6" style="height: 50px;"
-                    placeholder="Número de documento">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <input type="text" class="form-control form-control-lg" name="primer_apellido" id="primer_apellido"
+                        style="height: 50px;" placeholder="Primer apellido">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <input type="text" class="form-control form-control-lg" name="segundo_apellido"
+                        id="segundo_apellido" style="height: 50px;" placeholder="Segundo apellido">
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <input type="text" class="form-control form-control-lg" id="input7" style="height: 50px;"
-                    placeholder="Usuario">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <input type="email" class="form-control form-control-lg" name="correo" id="correo"
+                        style="height: 50px;" aria-describedby="emailHelp" placeholder="Correo electrónico">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <input type="text" class="form-control form-control-lg" name="num_telefonico" id="num_telefonico"
+                        style="height: 50px;" placeholder="Telefono">
+                </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="form-group mb-4">
-                <input type="password" class="form-control form-control-lg" id="input8" style="height: 50px;"
-                    placeholder="Contraseña">
-            </div>
-        </div>
-    </div>
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <div class="form-floating">
+                        <select class="form-select" id="floatingSelect" aria-label="Floating label select example" onchange="enviarSeleccion_doc()">
+                            <option></option>
+                            <option value="1">CC</option>
+                            <option value="2">Doc extranjero</option>
 
-    <div class="border-bottom my-3">
-        <h2>¿Qué servicio desea adquirir?</h2>
-        <div class="form-group mb-4">
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                    value="option1">
-                <label class="form-check-label" for="inlineRadio1">Alquilar vehículo</label>
+                        </select>
+                        <script>
+                            function enviarSeleccion_doc() {
+                                var select = document.getElementById("floatingSelect");
+                                var idSeleccionado = select.options[select.selectedIndex].value;
+                                // Envía el idSeleccionado a través de una solicitud AJAX o actualiza un campo oculto en el formulario
+                                document.getElementById("fk_id_tipo_doc").value = idSeleccionado;
+                                // Puedes enviar el formulario aquí si es necesario
+                            }
+                        </script>
+                        <input type="hidden" id="fk_id_tipo_doc" name="fk_id_tipo_doc">
+                        <label for="floatingSelect">Tipo de documento</label>
+                    </div>
+                </div>
             </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                    value="option2">
-                <label class="form-check-label" for="inlineRadio2">Prestar vehículo</label>
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <input type="number" class="form-control form-control-lg" name="num_documento" id="num_documento"
+                        style="height: 50px;" placeholder="Número de documento">
+                </div>
             </div>
         </div>
-        <div class="form-group mb-4">
-            <form asp-action="peticion" asp-controller="Peticion" method="post">
-                <button type="button" class="btn btn-secondary">Cancelar</button>
-            </form>
-            <form>
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <input type="text" class="form-control form-control-lg" name="usuario" id="usuario"
+                        style="height: 50px;" placeholder="Usuario">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group mb-4">
+                    <input type="password" class="form-control form-control-lg" name="contrasenia" id="contrasenia"
+                        style="height: 50px;" placeholder="Contraseña">
+                </div>
+            </div>
+        </div>
+
+        <div class="border-bottom my-3">
+
+            <div class="form-group mb-4">
+
+
                 <button type="submit" class="btn btn-primary">Guardar</button>
-            </form>
 
+
+            </div>
+            <form asp-action="peticion" asp-controller="Peticion" method="post">
+                <button type="submit" class="btn btn-secondary">Cancelar</button>
+            </form>
         </div>
-    </div>
+    </form>
 </div>
