--- a/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
+++ b/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
                                 asp-action="RegistroVehiculo">Registrar Vehiculos</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EntregaVehiculo"
+                                asp-action="EntregaVehiculo">Entrega Vehiculos</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ListadoReserva"
                                 asp-action="ListadoReserva">Listado Resevas</a>
                         </li>
