--- a/Reserva_Vehiculos/Views/ListadoReserva/MisReservas.cshtml
+++ b/Reserva_Vehiculos/Views/ListadoReserva/MisReservas.cshtml
@@ -29,8 +29,11 @@
                 <td>@Model._list_reserva[i].acep_fecha</td>
                 <td>@Model._list_vehiculos[i].num_placa</td>
                 <td>
-                    <a class="btn btn-danger" href="#">Cancelar reserva</a>
-                    <!--<a class="btn btn-info" href="#">Ver info Vehículo</a>-->
+                    <form asp-action="Cancelar" asp-controller="ListadoReserva" method="post">
+
+                        <button class="btn btn-danger" type="submit">Cancelar reserva</button>
+                        <input type="hidden" value="@Model._list_vehiculos[i].num_placa" name="cancela" id="cancela">
+                    </form>
                 </td>
             </tr>
         }
