--- a/Reserva_Vehiculos/Views/Peticion/Datos_Reserva.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Datos_Reserva.cshtml
@@ -65,12 +65,28 @@
                         <input name="fecha_fin" id="fecha_fin" type="hidden" value="@Model._Pet_Reserva.fecha_fin">
                         <input name="hora_ini" id="hora_ini" type="hidden" value="@Model._Pet_Reserva.hora_ini">
                         <input name="hora_fin" id="hora_fin" type="hidden" value="@Model._Pet_Reserva.hora_fin">
-                        <input name="fk_id_ubicacion_inicial" id="fk_id_ubicacion_inicial" type="hidden" value="@Model._Pet_Reserva.fk_id_ubicacion_inicial">
-                        <input name="fk_id_ubicacion_final" id="fk_id_ubicacion_final" type="hidden" value="@Model._Pet_Reserva.fk_id_ubicacion_final">
+                        <input name="fk_id_ubicacion_inicial" id="fk_id_ubicacion_inicial" type="hidden"
+                            value="@Model._Pet_Reserva.fk_id_ubicacion_inicial">
+                        <input name="fk_id_ubicacion_final" id="fk_id_ubicacion_final" type="hidden"
+                            value="@Model._Pet_Reserva.fk_id_ubicacion_final">
                         <button type="button" class="btn btn-secondary">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Realizar Peticion</button>
                     </div>
                 </div>
             </div>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+            <script>
+                $(document).ready(function () {
+                    // Esperar a que la descarga del archivo esté completa
+                    $(window).on('load', function () {
+                        // Redireccionar a una URL específica después de 3 segundos (3000 milisegundos)
+                        setTimeout(function () {
+                            window.location.href = '/Peticion/peticion';
+                        }, 3000); // Cambia el valor 3000 según sea necesario
+                    });
+                });
+            </script>
+
     </form>
+
 }
