--- a/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
+++ b/Reserva_Vehiculos/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@inject IHttpContextAccessor _httpContextAccessor
+@using Microsoft.AspNetCore.Identity
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,24 +26,29 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Reserva"
-                                asp-action="Reserva_">Confirmar Reservas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="RegistroVehiculo"
-                                asp-action="RegistroVehiculo">Registrar Vehiculos</a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EntregaVehiculo"
-                                asp-action="EntregaVehiculo">Entrega Vehiculos</a>
-                        </li>
-                       
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ListadoReserva"
-                                asp-action="ListadoReserva">Listado Resevas</a>
-                        </li>
+
+                        @if (User.IsInRole("Administrador")) // o 
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Reserva"
+                                    asp-action="Reserva_">Confirmar Reservas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="RegistroVehiculo"
+                                    asp-action="RegistroVehiculo">Registrar Vehiculos</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="EntregaVehiculo"
+                                    asp-action="EntregaVehiculo">Entrega Vehiculos</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ListadoReserva"
+                                    asp-action="ListadoReserva">Listado Resevas</a>
+                            </li>
+                        }
+
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
@@ -104,7 +110,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Reserva Vehiculos - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Reserva Vehiculos
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
