--- a/Reserva_Vehiculos/Views/EntregaVehiculo/EntregaVehiculo.cshtml
+++ b/Reserva_Vehiculos/Views/EntregaVehiculo/EntregaVehiculo.cshtml
@@ -8,164 +8,195 @@
 
 <form asp-action="EntregaVehiculo" asp-controller="EntregaVehiculo" method="post">
 
-<div id="entregaVehiculo">
-    <h1 id="titulo">Información de entrega del vehículo</h1><br><br>
-    <div class="row row-divider">
-        <div class="col-md-4">
-            <div class="form-group mb-5">
-                <input type="text" class="form-control form-control-lg" id="placa" style="height: 50px;"
-                    placeholder="Placa del vehículo">
+    <div id="entregaVehiculo">
+        <h1 id="titulo">Información de entrega del vehículo</h1><br><br>
+        <div class="row row-divider">
+            <div class="col-md-4">
+                <div class="form-group mb-5">
+                    <input type="text" class="form-control form-control-lg" id="placa" style="height: 50px;"
+                        placeholder="Placa del vehículo">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <button class="btn btn-lg btn-primary" type="button" id="buscarBtn">Buscar</button>
             </div>
         </div>
-        <div class="col-md-2">
-            <button class="btn btn-lg btn-primary" type="button" id="buscarBtn">Buscar</button>
-        </div>
-    </div>
-    <table class="table table-hover" id="resultados">
-        <thead>
-            <tr>
-                <th scope="col">Placa</th>
-                <th scope="col">Modelo</th>
-                <th scope="col">Numero Chasis</th>
-                <th scope="col">Modelo Motor</th>
-                <th scope="col">Cilindraje</th>
-                <th scope="col">Categoria</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+        <table class="table table-hover" id="resultados">
+            <thead>
+                <tr>
+                    <th scope="col">Placa</th>
+                    <th scope="col">Modelo</th>
+                    <th scope="col">Numero Chasis</th>
+                    <th scope="col">Modelo Motor</th>
+                    <th scope="col">Cilindraje</th>
+                    <th scope="col">Categoria</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
 
-    <script>
-        $(document).ready(function () {
-            $('#buscarBtn').click(function (e) {
-                e.preventDefault(); // Previene la acción predeterminada del botón
-                var placa = $('#placa').val();
-                console.log("Placa buscada:", placa); // Depuración
-                $.ajax({
-                    url: '@Url.Action("BuscarVehiculo", "EntregaVehiculo")',
-                    type: 'GET',
-                    data: { placa: placa },
-                    success: function (response) {
-                        console.log("Respuesta del servidor:", response); // Depuración
-                        var tbody = $('#resultados tbody');
-                        tbody.empty();
-                        if (response.success) {
-                            var vehiculo = response.data;
-                            tbody.append('<tr><td>' + vehiculo.num_placa + '</td><td>' + vehiculo.modelo + '</td><td>' + vehiculo.num_chasis + '</td><td>' + vehiculo.modelo_motor + '</td><td>' + vehiculo.cilindraje + '</td><td>' + vehiculo.tipo_vehiculo + '</td></tr>');
-                        } else {
-                            tbody.append('<tr><td colspan="6">' + response.message + '</td></tr>');
-                        }
-                    },
-                    error: function (error) {
-                        console.log("Error en la solicitud AJAX:", error); // Depuración
-                    }
-                });
-            });
-        });
-    </script>
-
-    <div class="row justify-content-center align-items-center">
-        <h4 id="titulo2" style="text-align: center;">Datos del vehículo</h4>
-        <div id="fecha" class="col-md-4">
-            <input type="date" id="fechaActual2" name ="fechaActual2" class="form-control" required>
-    
-        </div>
-
-        <div id="hora" class="col-md-4">
-            <input type="time" id="horaActual2" name ="horaActual2" class="form-control" required>
-            <script>
-                document.addEventListener('DOMContentLoaded', function () {
-                    var timeInput = document.getElementById('horaActual2');
-
-                    timeInput.addEventListener('input', function () {
-                        var value = this.value;
-                        var hour = value.split(':')[0];
-
-                        // Si el valor tiene minutos, resetear a la hora sin minutos
-                        if (value.includes(':')) {
-                            this.value = hour + ':00';
+        <script>
+            $(document).ready(function () {
+                $('#buscarBtn').click(function (e) {
+                    e.preventDefault(); // Previene la acción predeterminada del botón
+                    var placa = $('#placa').val();
+                    console.log("Placa buscada:", placa); // Depuración
+                    $.ajax({
+                        url: '@Url.Action("BuscarVehiculo", "EntregaVehiculo")',
+                        type: 'GET',
+                        data: { placa: placa },
+                        success: function (response) {
+                            console.log("Respuesta del servidor:", response); // Depuración
+                            var tbody = $('#resultados tbody');
+                            tbody.empty();
+                            if (response.success) {
+                                var vehiculo = response.data;
+                                tbody.append('<tr><td>' + vehiculo.num_placa + '</td><td>' + vehiculo.modelo + '</td><td>' + vehiculo.num_chasis + '</td><td>' + vehiculo.modelo_motor + '</td><td>' + vehiculo.cilindraje + '</td><td>' + vehiculo.tipo_vehiculo + '</td></tr>');
+                            } else {
+                                tbody.append('<tr><td colspan="6">' + response.message + '</td></tr>');
+                            }
+                        },
+                        error: function (error) {
+                            console.log("Error en la solicitud AJAX:", error); // Depuración
                         }
                     });
-
                 });
+            });
+        </script>
 
-            </script>
-        </div>
+        <div class="row justify-content-center align-items-center">
+            <h4 id="titulo2" style="text-align: center;">Datos del vehículo</h4>
+            <div id="fecha" class="col-md-4">
+                <input type="date" id="fechaActual2" name="fechaActual2" class="form-control" required>
 
-        <div class="col-md-4">
-            <div class="form-group mb-5">
-                <div class="form-floating">
-                    <select class="form-select" id="floatingUbicacion" aria-label="Floating label select example" onchange="enviarSeleccion_Ubicacion()" required>
-                        <option></option>
-                        @foreach (var item in Model.ListatipoUbicacion)
-                        {
-                            <option value="@item.id_ubicacion" required>@item.Ubicacion_ini</option>
-                        }
-                    </select>
-                    <label for="floatingUbicacion">Ubicación</label>
-                    <input type="hidden" name="ubicacion" id="ubicacion">
+            </div>
+
+            <div id="hora" class="col-md-4">
+                <input type="time" id="horaActual2" name="horaActual2" class="form-control" required>
+                <script>
+                    document.addEventListener('DOMContentLoaded', function () {
+                        var timeInput = document.getElementById('horaActual2');
+
+                        timeInput.addEventListener('input', function () {
+                            var value = this.value;
+                            var hour = value.split(':')[0];
+
+                            // Si el valor tiene minutos, resetear a la hora sin minutos
+                            if (value.includes(':')) {
+                                this.value = hour + ':00';
+                            }
+                        });
+
+                    });
+
+                </script>
+            </div>
+
+            <div class="col-md-4">
+                <div class="form-group mb-5">
+                    <div class="form-floating">
+                        <select class="form-select" id="floatingUbicacion" aria-label="Floating label select example"
+                            onchange="enviarSeleccion_Ubicacion()" required>
+                            <option></option>
+                            @foreach (var item in Model.ListatipoUbicacion)
+                            {
+                                <option value="@item.id_ubicacion" required>@item.Ubicacion_ini</option>
+                            }
+                        </select>
+                        <label for="floatingUbicacion">Ubicación</label>
+                        <input type="hidden" name="ubicacion" id="ubicacion">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="costos" class="row justify-content-center align-items-center">
-        <h4 id="titulo3" style="text-align: center;">Costo adicional</h4>
-        <div class="col-md-4">
-            <div class="form-group mb-5">
-                <label for="listaDaños">Selecciona los daños:</label>
-                <ul id="listaDaños" class="list-group">
+        <div id="costos" class="row justify-content-center align-items-center">
+            <h4 id="titulo3" style="text-align: center;">Costo adicional</h4>
+            <div class="col-md-4">
+                <div class="form-group mb-5">
+                    <label for="listaDaños">Selecciona los daños:</label>
+
                     @foreach (var item in Model.Lista_danio_Vehiculos)
                     {
-                        <li class="list-group-item"><input type="checkbox" value="@item.valor_danio"> @item.danio
-                        </li>
+                        <ul id="listaDaños" class="list-group">
+                            <li class="list-group-item">
+                                <input type="checkbox" value="@item.valor_danio" name="selectedDanios"
+                                    data-danio="@item.danio" class="primary-checkbox" data-id="@item.id_danio" />
+                                @item.danio
+
+                            </li>
+                        </ul>
+                        <input type="checkbox" value="@item.id_danio" name="hiddenSelectedDanios" class="hidden-checkbox"
+                            data-id="@item.id_danio" /> <!-- se creo un segundo para enviar el id_danio-->
                     }
-                </ul>
-                <!-- Mostrar el valor total aquí -->
-                <div id="contenedorValorTotal" class="container"></div>
+                    <style>
+                        .hidden-checkbox {
+                            display: none;
+                        }
+                    </style>
+
+                    <script>
+                        document.querySelectorAll('.primary-checkbox').forEach(function (primaryCheckbox) {
+                            primaryCheckbox.addEventListener('change', function () {
+                                var id = primaryCheckbox.getAttribute('data-id');
+                                var hiddenCheckbox = document.querySelector('.hidden-checkbox[data-id="' + id + '"]');
+                                if (hiddenCheckbox) {
+                                    hiddenCheckbox.checked = primaryCheckbox.checked;
+                                }
+                            });
+                        });
+                    </script>
+                    <input type="hidden" id="valorTotal" name="valorTotal" />
+                    <!-- Mostrar el valor total aquí -->
+                    <div id="contenedorValorTotal" class="container"
+                        style="display: flex; text-align: center; justify-content: center;">
+
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script>
-        // Función para calcular el costo adicional y mostrar el valor total
-        function calcularCostoAdicional() {
+        <script>
+            // Función para calcular el costo adicional y mostrar el valor total
+            function calcularCostoAdicional() {
+                var checkboxes = document.querySelectorAll("#listaDaños input[type='checkbox']");
+                var costoAdicional = 0;
+
+                // Calcula el costo adicional según los daños seleccionados
+                checkboxes.forEach(function (checkbox) {
+                    if (checkbox.checked) {
+                        costoAdicional += parseInt(checkbox.value);
+                    }
+                });
+
+                // Muestra el valor total debajo de la lista de daños
+                document.getElementById("contenedorValorTotal").innerHTML = "<p>Valor total: $" + (costoAdicional) + "</p>";
+                // Actualiza el campo oculto con el valor total
+                document.getElementById("valorTotal").value = costoAdicional;
+            }
+
+            // Agrega evento change a los checkboxes para llamar a calcularCostoAdicional cuando cambien
             var checkboxes = document.querySelectorAll("#listaDaños input[type='checkbox']");
-            var costoAdicional = 0;
-
-            // Calcula el costo adicional según los daños seleccionados
             checkboxes.forEach(function (checkbox) {
-                if (checkbox.checked) {
-                    costoAdicional += parseInt(checkbox.value);
-                }
+                checkbox.addEventListener("change", calcularCostoAdicional);
             });
-
-            // Muestra el valor total debajo de la lista de daños
-            document.getElementById("contenedorValorTotal").innerHTML = "<p>Valor total: $" + (costoAdicional) + "</p>";
-        }
-
-        // Agrega evento change a los checkboxes para llamar a calcularCostoAdicional cuando cambien
-        var checkboxes = document.querySelectorAll("#listaDaños input[type='checkbox']");
-        checkboxes.forEach(function (checkbox) {
-            checkbox.addEventListener("change", calcularCostoAdicional);
-        });
-    </script>
+        </script>
 
 
-    <div id="boton-entrega" class="d-flex justify-content-center">
-        <button class="btn btn-lg btn-primary" type="submit">Guardar</button>
+        <div id="boton-entrega" class="d-flex justify-content-center">
+            <button class="btn btn-lg btn-primary" type="submit">Guardar</button>
+        </div>
+
+        <script>
+            function enviarSeleccion_Ubicacion() {
+                var select = document.getElementById("floatingUbicacion");
+                var idSeleccionado = select.options[select.selectedIndex].value;
+                // Envía el idSeleccionado a través de una solicitud AJAX o actualiza un campo oculto en el formulario
+                document.getElementById("ubicacion").value = idSeleccionado;
+
+                // Puedes enviar el formulario aquí si es necesario
+            }
+        </script>
     </div>
-
-    <script>
-        function enviarSeleccion_Ubicacion() {
-            var select = document.getElementById("floatingUbicacion");
-            var idSeleccionado = select.options[select.selectedIndex].value;
-            // Envía el idSeleccionado a través de una solicitud AJAX o actualiza un campo oculto en el formulario
-            document.getElementById("ubicacion").value = idSeleccionado;
-            
-            // Puedes enviar el formulario aquí si es necesario
-        }
-    </script>
-</div>
 </form>
