--- a/Reserva_Vehiculos/Views/Peticion/Datos_Reserva.cshtml
+++ b/Reserva_Vehiculos/Views/Peticion/Datos_Reserva.cshtml
@@ -65,6 +65,7 @@
                         <input name="fecha_fin" id="fecha_fin" type="hidden" value="@Model._Pet_Reserva.fecha_fin">
                         <input name="hora_ini" id="hora_ini" type="hidden" value="@Model._Pet_Reserva.hora_ini">
                         <input name="hora_fin" id="hora_fin" type="hidden" value="@Model._Pet_Reserva.hora_fin">
+                        <input name="costo" id="costo" type="hidden" value="@Model._Pet_Reserva.costo">
                         <input name="fk_id_ubicacion_inicial" id="fk_id_ubicacion_inicial" type="hidden"
                             value="@Model._Pet_Reserva.fk_id_ubicacion_inicial">
                         <input name="fk_id_ubicacion_final" id="fk_id_ubicacion_final" type="hidden"
